Criação da parte em JavaScript

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
         <footer class="flex">
             <section id="redes sociais">
                 <a href="https://www.linkedin.com/in/elisa-bicudo-lopes/">
-                    <img src="assets/img/linkedin.svg" alt="Linkedin"/>
+                    <img src="assets/img/linkedin.svg" alt="Linkedin" class="social_icon"/>
                 </a>
 
                 <a href="https://github.com/eblopes23">
-                    <img src="assets/img/github.svg" alt="GitHub"/>
+                    <img src="assets/img/github.svg" alt="GitHub" class="social_icon"/>
                 </a>
             </section>
             <h3>Feito com ❤️ por Elisa Lopes - 2025</h3>
