--- a/contato.html
+++ b/contato.html
@@ -128,9 +128,10 @@
 
 			</section>
 
-			<h3>Feito com 🧡 por Elisa Lopes- 2025</h3>
+			<h3>Feito com ❤️ por Elisa Lopes- 2025</h3>
 
 		</footer>
 
+		<script src="assets/js/script.js"></script>
     </body>
 </html>
