correções no html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="Elisa Bicudo Lopes" content="Generation Brasil">
         <meta name="keywords" content="HTML, CSS, JavaScript">
         <link rel="icon" type="image/svg" href="./assets/img/favicon.svg" />
-        <title>Meu Portifólio</title>
+        <title>Meu Perfil</title>
         <link rel="stylesheet" href="./assets/css/stylesheet.css">
     </head>
 
